    possible. (Closes: #673957)
  * backportpackage: Avoid uploading orig tarballs if they are already present
    in the destination PPA (LP: #691897)
  * Allow mk-sbuild to be run by root if a configuration file exists
    (LP: #888736)
  * backportpackage: Allow unsigned backports (LP: #992739)
  * update-maintainer: Add a function to restore the original maintainer.
  * submittodebian: Revert Ubuntu Maintainer mangling, and re-build the source
    package before diffing. (LP: #902233)

  [ Evan Broder ]
  * backportpackage: Add -c, --close flag to include a changelog closer.
  * backportpackage: Switch to ~ubuntu12.04.1-style version numbers
    instead of ~precise1, to make our version numbers more future-proof.
  * backportpackage: Pass -v to debuild with last published version
    number. This matches the way backports have traditionally been
    generated by archive admins.

 -- Evan Broder <evan@ebroder.net>  Sun, 13 May 2012 13:51:18 -0700

ubuntu-dev-tools (0.141) unstable; urgency=low

  * syncpackage: Log into Launchpad anonymously with --no-lp
    (LP: #979849)
  * seeded-in-ubuntu: Log into Launchpad anonymously.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 12 Apr 2012 23:46:24 +0200

ubuntu-dev-tools (0.140) unstable; urgency=low

  [ Stefano Rivera ]
  * Bump Standards-Version to 3.9.3, no changes needed.
  * Update machine-readable copyright Format to 1.0.
  * pbuilder-dist: Use the same chroot, whether the system-architecture was
    the supplied architecture or was chosen by default (LP: #943435)
  * backportpackage
    - Prompt to delete existing workdirs (LP: #885514)
    - Support a BACKPORTPACKAGE_UPLOAD configuration/enviornment variable
      (LP: #693217)
  * requestsync:
    - New packages from non-free or contrib go into multiverse (LP: #935643)
    - Catch SeriesNotFoundException and display a friendly error (LP: #963888)

  [ Daniel Hahler ]
  * ubuntutools/archive.py: use ProxyHandler in _download_file.